<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map">Map Location</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_temp_label">Temperature</string>
    <string name="pref_title_temp_units">Temperature Units</string>
    <string name="pref_temp_key">temp_units</string>
    <string name="prefs_units_metric">metric</string>
    <string name="prefs_units_imperial">imperial</string>

    <string-array name="pref_temp_units_options">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_temp_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string name="action_share">Share</string>

</resources>
